# rusty-serverless-api

./: .env  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md
ansible/: ansible.cfg  dev.yml
scripts/: deploy.sh  terraform.sh
src/: create.rs  delete.rs  error.rs  lib.rs  main.rs  read.rs  update.rs
terraform/: import.tf  main.tf  outputs.tf  variables.tf
