[package]
name = "rusty_serverless_api"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-sdk-dynamodb = "1.52.0"
tokio = { version = "1", features = ["full"] }
aws-config = "1.5.9"
thiserror = "1.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.39"
async-trait = "0.1.83"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[build]
target = "x86_64-unknown-linux-gnu"

[target.x86_64-unknown-linux-gnu]
runner = "cargo-lambda run --release"

[[bin]]
name = "rusty_serverless_api"
src = ["src/main.rs"]

[lib]
name = "rusty_serverless_api"
path = "src/lib.rs"
